# ChemVisionAgent

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  gen_demo_images.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  baselines.py  generate_all_figures.py  generate_engineering_figures.py  generate_figures.py  generate_improvement_table.py  run_all.py  run_baselines.py  run_conditioning_ablation.py  run_scientific.py  run_zinc250k.py
benchmarks/results/: baseline_results.json  benchmark_results.json  scientific_results.json  zinc250k_results.json
chemvision/: __init__.py  api.py  cli.py
chemvision/agent/: __init__.py  adapter.py  agent.py  config.py  planner.py  report.py  tool_log.py  trace.py
chemvision/audit/: __init__.py  config.py  degradation.py  matrix.py  report.py  report_generator.py  run.py  runner.py
chemvision/core/: __init__.py  batch.py  exceptions.py  log.py  registry.py  reproducibility.py
configs/: lora_train.yaml
demo/: app.py
docs/: PIPELINE.md
memory/: MEMORY.md
notebooks/: 01_data_exploration.ipynb  01_molecular_lab.ipynb  02_crystal_lab.ipynb  02_model_inference.ipynb  03_agent_trace.ipynb  03_property_prediction.ipynb  04_pareto_mcts.ipynb  05_csca_training.ipynb  06_flow_matching.ipynb  07_eval_and_quality.ipynb
scripts/: draw_pipeline.py  train_lora.py
tests/: test_agent.py  test_agent_impl.py  test_audit.py  test_capability_matrix.py  test_csca_flow_dataset.py  test_data.py  test_degradation.py  test_e2e.py  test_e2e_new_pipeline.py  test_e2e_workflow.py  test_edge_cases.py  test_encoder.py  test_eval_and_data.py  test_gaps.py  test_reasoning.py  test_report_generator.py  test_skills.py  test_typed_skills.py
(+67 files in other folders)
